src/app/admin/supplier/risk-analysis/analysis-business/analysis-business.component.css
:host ::ng-deep ol, li {
  padding: 0;
  margin: 0;
  list-style: none;
}

h1 { 
  font-size: 1.5em;
  margin: 70px 42px;
}

:host ::ng-deep .activity-chart, h1 { color: #525252; }
:host ::ng-deep .days li, .day-key { background: #eee; }
:host ::ng-deep .activity-chart {
  width: 90%;
  height: 205px;
  margin: auto;
  position: relative;
}

/* offset so days of the week line up
over-specified to win specificity battle */
:host ::ng-deep .activity-chart .offset:hover { outline: none; }
:host ::ng-deep .activity-chart .offset { background: none; }

/*** month headings ***/
:host ::ng-deep .month ol {
  display: block;
  height: 30px;
}

:host ::ng-deep .month li {
  float: right;
  margin-left: 39px;
  font-size: 0.75em;
}

/** chart **/
:host ::ng-deep .chart {
  width: 100%;
}

/*** day of week heading ***/
:host ::ng-deep .days-of-week {
  width: 15px;
  left: -10px;
  top: 80px;
}

@-moz-document :host ::ng-deep url-prefix() {
  .days-of-week { left: 23px; }
}

:host ::ng-deep .days-of-week { font-size: 0.7em; }
:host ::ng-deep .days-of-week li:nth-child(2) { margin: 13px 0; }

/*** draw days ***/
:host ::ng-deep .days {
  font-size: 0.75em;
  margin-top: 15px;
}

:host ::ng-deep .days ol {
  display: block;
}

:host ::ng-deep .days ol .name {
  position: relative;
  display: inline-block;
  width: 100px;
  height: 30px;
  margin-right: 10px;
}

:host ::ng-deep .days ol .name label {
  position: absolute;
  top: 30%;
  text-align: end;
  right: 0px;
}

:host ::ng-deep .days ol .client-data {
  position: relative;
  display: inline-block;
  width: 80px;
  height: 30px;
}

:host ::ng-deep .days ol .client-data label {
  position: absolute;
  top: 30%;
  text-align: end;
  right: 0px;
}

/* create vertical weeks */
:host ::ng-deep .week {
  display: inline-block;
  height: 30px;
}

:host ::ng-deep .week li {
  width: 30px;
  height: 30px;
  float: left; /* order days starting at the bottom right */
}

:host ::ng-deep .days .bold { font-weight: bold; }
:host ::ng-deep .days li {  margin: 1.5px; }

/*** color-code by activity level ***/
:host ::ng-deep .activity-chart .activity { background: #d6e685; }
:host ::ng-deep .activity-chart .activity-two { background: #8cc665; }
:host ::ng-deep .activity-chart .activity-three { background: #44a340; }
:host ::ng-deep .activity-chart .activity-four { background: #1e6823; }

/*** key ***/
:host ::ng-deep .key li {
  width: 12px;
  height: 12px;
  float: right; /* order days starting at the bottom right */
  list-style: none;
}
:host ::ng-deep .key {
  position: absolute;
  bottom: 0;
  right: 55px;
}

:host ::ng-deep .key ul {
  display: inline-block; 
  margin: 0;
  padding: 0;
}

:host ::ng-deep .key li {  margin: 0px 2px; }

/*** tooltips ***/
:host ::ng-deep .days li .tooltip { display: none; }
:host ::ng-deep .days li:hover {  
  /*outline disabled due to firefox cross-broswer issue */
  /*outline: 1px solid #555;*/
  position: relative;
  z-index: 3;
}

:host ::ng-deep .days li:hover .tooltip {
  transform: rotate(-90deg);
  display: block;
  position: absolute;
  /* top & left are reversed because the calendar is rotated 90 deg */
  top: -13px;
  left: -85px;
  width: 100px;
  padding: 10px 5px;
  text-align: center;
  background-color: #333; 
  color: #f1f1f1;
}

/*** little triangle on the tooltip ***/
:host ::ng-deep .tooltip:before {
  content: "";
  position: absolute;
  width: 0; 
  height: 0; 
  
  bottom: -10px;
  right: 50px;
  
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 11px solid #333;
}

